# my-python-package

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: cd.yml
_sources/: index.rst.txt
docs/: conf.py
tests/: test_basic.py
